@@ -32,7 +32,7 @@
 #ifndef _CONCURRENT_MESSAGE_DISPATCHER_H
 #define _CONCURRENT_MESSAGE_DISPATCHER_H
 
-#include "dmcs/BaseNotification.h"
+#include "dmcs/AskNextNotification.h"
 #include "dmcs/StreamingForwardMessage.h"
 #include "network/MessagingGateway.h"
 #include "network/ConcurrentMessageQueue.h"
@@ -52,7 +52,7 @@ namespace dmcs {
 							      Decisionlevel, 
 							      Conflict, 
 							      StreamingForwardMessage,
-							      BaseNotification>
+							      AskNextNotification>
   {
   private:
     /// here we pile up all MQ's that receive messages
@@ -82,7 +82,7 @@ namespace dmcs {
     sendIncomingMessage(StreamingForwardMessage* sfMess, std::size_t from, std::size_t to, std::size_t prio, int msecs = 0);
 
     virtual bool
-    sendNotification(BaseNotification* notif, std::size_t from, std::size_t to, std::size_t prio, int msecs = 0);
+    sendNotification(AskNextNotification* notif, std::size_t from, std::size_t to, std::size_t prio, int msecs = 0);
 
     virtual bool
     sendModel(PartialBeliefState* b, std::size_t path, std::size_t sid, std::size_t from, std::size_t to, std::size_t prio, int msecs = 0);
@@ -101,7 +101,7 @@ namespace dmcs {
     virtual StreamingForwardMessage*
     recvIncomingMessage(std::size_t from, std::size_t& prio, int& msecs);
 
-    virtual BaseNotification*
+    virtual AskNextNotification*
     recvNotification(std::size_t from, std::size_t& prio, int& msecs);
 
     virtual struct ModelSession
