@@ -31,7 +31,7 @@
 #ifndef _CONCURRENT_MESSAGE_QUEUE_FACTORY_H
 #define _CONCURRENT_MESSAGE_QUEUE_FACTORY_H
 
-#include "dmcs/BaseNotification.h"
+#include "dmcs/AskNextNotification.h"
 #include "dmcs/StreamingForwardMessage.h"
 #include "network/MessagingGateway.h"
 #include "network/ConcurrentMessageQueue.h"
@@ -45,7 +45,7 @@
 
 namespace dmcs {
 
-typedef MessagingGateway<PartialBeliefState, Decisionlevel, Conflict, StreamingForwardMessage, BaseNotification> MessagingGatewayBC;
+typedef MessagingGateway<PartialBeliefState, Decisionlevel, Conflict, StreamingForwardMessage, AskNextNotification> MessagingGatewayBC;
 typedef boost::shared_ptr<MessagingGatewayBC> MessagingGatewayBCPtr;
 
 const std::size_t DEFAULT_PACK_SIZE = 20;
